# Customizing-Object-Detectors-for-Indoor-Robots

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: image_collector.launch  ucf_ardrone_mosse.launch  ucf_bag_detector.launch  ucf_drone_detector.launch
msg/: BOX.msg  filters.msg  horizontalXY.msg
scripts/: bag_analyzing.py  humanDT.py  image_collector_agent.py  record_bag.py  test.py  ucf_drone_io.py  ucf_drone_mosse.py  ucf_drone_object_detection.py  ucf_drone_object_detection_v2.py  ucf_drone_template.py
scripts/control_agent/: controlAgent.py  controlAgent.py~  joystick.py
scripts/control_agent/commands_agent/: commandsAgent.py
scripts/data_generator/: object_detection_2d_data_generator.py  object_detection_2d_image_boxes_validation_utils.py
scripts/data_generator/ssd_encoder_decoder/: ssd_input_encoder.py
scripts/filters_agent/: filtersAgent.py
scripts/measurements_agent/: measurementsAgent.py
scripts/models/: dunet_pascal_256.py
scripts/object_detection_agent/: README.md  modified_od_detect_objects.py  od_detect_custom_object.py  od_detect_custom_object.py~  od_detect_objects.py~
scripts/object_detection_agent/DUNet/: dronenet_fpn_evaluation_256.ipynb  dunet.py  dunet_detector.py  dunet_detector_ssd.py  dunet_fpn_256.py  dunet_fpn_training_256.ipynb  keras_ssd300.py  test.py
scripts/object_detection_agent/research/: fcrar18_mix_generate_tfrecord.py~  generate_tfrecord.py  generate_tfrecord.py~  (+6 more)
scripts/ssd_encoder_decoder/: ssd_input_encoder.py
scripts/tracker_agent/: mosseTracker.py  onlineTracker.py
scripts/utils/: app_utils.py
(+128 files in other folders)
